[package]
name = "neon-js-error-example"
version = "0.1.0"
description = "Repro case for JS errors in Neon"
authors = ["Dave Kozma <dave@davekozma.com>"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
